--- a/.nest/app/requirements.txt
+++ b/.nest/app/requirements.txt
@@ -1,4 +1,5 @@
 anyio==4.7.0
+apispec==6.8.0
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -22,6 +23,7 @@ defusedxml==0.7.1
 executing==2.1.0
 fastjsonschema==2.21.1
 Flask==3.1.0
+flask-smorest==0.45.0
 fqdn==1.5.1
 gunicorn==23.0.0
 h11==0.14.0
@@ -52,6 +54,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 MarkupSafe==3.0.2
+marshmallow==3.23.2
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.10.1
@@ -105,6 +108,7 @@ tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.13
+webargs==8.6.0
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
