--- a/.nest/app/requirements.txt
+++ b/.nest/app/requirements.txt
@@ -11,6 +11,7 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
 blinker==1.9.0
+bs4==0.0.2
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -24,6 +25,7 @@ executing==2.1.0
 fastjsonschema==2.21.1
 Flask==3.1.0
 flask-smorest==0.45.0
+Flask-SQLAlchemy==3.1.1
 fqdn==1.5.1
 gunicorn==23.0.0
 h11==0.14.0
@@ -53,6 +55,7 @@ jupyterlab==4.3.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
+lxml==5.3.0
 MarkupSafe==3.0.2
 marshmallow==3.23.2
 matplotlib-inline==0.1.7
